# parsync

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: bench_sftp.sh
src/: cli.rs  config.rs  main.rs  remote.rs  state.rs  sync.rs
tests/: cli.rs  e2e_sshd.rs  perf_smoke.rs
